--- a/index.html
+++ b/index.html
@@ -28,12 +28,6 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-    Theme Name: Reveal
-    Theme URL: https://bootstrapmade.com/reveal-bootstrap-corporate-template/
-    Author: BootstrapMade.com
-    License: https://bootstrapmade.com/license/
-  ======================================================= -->
 </head>
 
 <body id="body">
@@ -144,7 +138,7 @@
     <!--==========================
       Services Section
     ============================-->
-    <section id="services">
+    <!-- <section id="services">
       <div class="container">
         <div class="section-header">
           <h2>Services</h2>
@@ -188,12 +182,12 @@
         </div>
 
       </div>
-    </section><!-- #services -->
+    </section>#services -->
 
     <!--==========================
       Clients Section
     ============================-->
-    <section id="clients" class="wow fadeInUp">
+    <!-- <section id="clients" class="wow fadeInUp">
       <div class="container">
         <div class="section-header">
           <h2>Clients</h2>
@@ -212,7 +206,7 @@
         </div>
 
       </div>
-    </section><!-- #clients -->
+    </section>#clients -->
 
     <!--==========================
       Our Portfolio Section
@@ -324,7 +318,7 @@
     <!--==========================
       Testimonials Section
     ============================-->
-    <section id="testimonials" class="wow fadeInUp">
+    <!-- <section id="testimonials" class="wow fadeInUp">
       <div class="container">
         <div class="section-header">
           <h2>Testimonials</h2>
@@ -390,12 +384,12 @@
         </div>
 
       </div>
-    </section><!-- #testimonials -->
+    </section>#testimonials -->
 
-    <!--==========================
+    <!-- ==========================
       Call To Action Section
     ============================-->
-    <section id="call-to-action" class="wow fadeInUp">
+    <!-- <section id="call-to-action" class="wow fadeInUp">
       <div class="container">
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
@@ -408,7 +402,7 @@
         </div>
 
       </div>
-    </section><!-- #call-to-action -->
+    </section>#call-to-action -->
 
     <!--==========================
       Our Team Section
@@ -569,12 +563,6 @@
         &copy; Copyright <strong>Reveal</strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Reveal
-        -->
         <a href="https://bootstrapmade.com/">Free Bootstrap Templates</a> by BootstrapMade
       </div>
     </div>
