--- a/index.html
+++ b/index.html
@@ -560,10 +560,10 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>Reveal</strong>. All Rights Reserved
+        &copy; Copyright <strong>Bauyrzhan Zhakanov</strong>
       </div>
       <div class="credits">
-        <a href="https://bootstrapmade.com/">Free Bootstrap Templates</a> by BootstrapMade
+        <a href="https://bootstrapmade.com/"></a>
       </div>
     </div>
   </footer><!-- #footer -->
