--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
           <div class="row">
             <div class="col-lg-4 col-md-6">
               <div class="journal-info">
-                <a href="blog-single.html"><img src="assets/img/blog-post-1.jpg" class="img-responsive" alt="img"></a>
+                <a href="pages/blog-single.html"><img src="assets/img/blog-post-1.jpg" class="img-responsive" alt="img"></a>
                 <div class="journal-txt">
-                  <h4><a href="blog-single.html">Blogs</a></h4>
+                  <h4><a href="pages/blog-single.html">Blogs</a></h4>
                 </div>
               </div>
             </div>
@@ -300,10 +300,10 @@
       <div class="socials-media text-center">
 
         <ul class="list-unstyled">
-          <li><a href="#"><i class="bi bi-facebook"></i></a></li>
-          <li><a href="#"><i class="bi bi-twitter"></i></a></li>
-          <li><a href="https://www.instagram.com/akbota.khan/"><i class="bi bi-instagram"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/akbotaomirkhanova/"><i class="bi bi-linkedin"></i></a></li>
+          <!-- <li><a href="#"><i class="bi bi-facebook"></i></a></li>
+          <li><a href="#"><i class="bi bi-twitter"></i></a></li> -->
+          <li><a href="https://www.instagram.com/bzwayne/"><i class="bi bi-instagram"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/bauyrzhan-zhakanov/"><i class="bi bi-linkedin"></i></a></li>
         </ul>
 
   </div>
