--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
           <li><a class="nav-link  scrollto" href="#services">Experience</a></li>
           <li class="dropdown"><a href="#journal"><span>Blog</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="blog-single.html">Business</a></li>
-              <li><a href="blog-single.html">Photos</a></li>
-              <li><a href="blog-single.html">Articles</a></li>
+              <li><a href="blog-single.html">Works</a></li>
+              <!-- <li><a href="blog-single.html">Photos</a></li> -->
+              <!-- <li><a href="blog-single.html">Articles</a></li> -->
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
