--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="col-lg-4 ">
             <div class="div-img-bg">
               <div class="about-img">
-                <img src="assets/img/meee.jpg" class="img-responsive" alt="me">
+                <!-- <img src="assets/img/meee.jpg" class="img-responsive" alt="me"> -->
                 <img src="assets/img/mee.jpg" class="img-responsive" alt="me">
               </div>
             </div>
