--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li><a class="nav-link  scrollto" href="#services">Experience</a></li>
           <li class="dropdown"><a href="#journal"><span>Blog</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="blog-single.html">Works</a></li>
+              <li><a href="pages/blog-single.html">Works</a></li>
               <!-- <li><a href="blog-single.html">Photos</a></li> -->
               <!-- <li><a href="blog-single.html">Articles</a></li> -->
             </ul>
@@ -81,7 +81,6 @@
           <div class="col-lg-4 ">
             <div class="div-img-bg">
               <div class="about-img">
-                <!-- <img src="assets/img/meee.jpg" class="img-responsive" alt="me"> -->
                 <img src="assets/img/mee.jpg" class="img-responsive" alt="me">
               </div>
             </div>
@@ -136,60 +135,6 @@
               </div>
             </div> -->
 
-            <!-- <div class="swiper-slide">
-              <div class="services-block">
-                <i class="bi bi-bar-chart"></i>
-                <span>Social Media Manager</span>
-                <span>Khan Academy Qazaq</span>
-                <p>2018 August - 2020 March</p>
-                <ul class="separator">
-                  <li>Worked in a team at the founding stages of the project.</li>
-                  <li>Worked on the project's brand recognition.</li>
-                  <li>Attracted volunteers for the project through social media.</li>
-                </ul>
-              </div>
-            </div> -->
-
-            <!-- <div class="swiper-slide">
-              <div class="services-block">
-                <i class="bi bi-binoculars"></i>
-                <span>Assistant of professors</span>
-                <span>Research Assistantships</span>
-                <p>2020 and 2022 Fall semesters</p>
-                <ul class="separator">
-                  <li>Assisted Dr. Ramey Moore with analyzing and selecting research articles about the perception of environmental issues in Kazakhstan.</li>
-                  <li>Translated, analyzed and synthesized data from social media.</li>
-                  <li>Assisted Dr. Reed Coil with conducting archaeological excavations, data entry and analysis.</li>
-                </ul>
-              </div>
-            </div> -->
-
-            <!-- <div class="swiper-slide">
-              <div class="services-block">
-                <i class="bi bi-brightness-high"></i>
-                <span>Event Manager</span>
-                <span>Social Project "Ertenim"</span>
-                <p>2021 August - November</p>
-                <ul class="separator">
-                  <li>Created the concept and mission of the project with other members.</li>
-                  <li>Organized a three day long summer camp for children from socially vulnerable families.</li>
-                </ul>
-              </div>
-            </div> -->
-
-            <!-- <div class="swiper-slide">
-              <div class="services-block">
-                <i class="bi bi-calendar4-week"></i>
-                <span>General Manager</span>
-                <span>LLC "Arel"</span>
-                <p>2020 and 2022 Fall semesters</p>
-                <ul class="separator">
-                  <li>Raised the revenue by 4000 euros a month after allocating marketing expenditures more effectively.</li>
-                  <li>Changed the brand presentation on marketing platforms. Changed the supplier company to solve logistics issues.</li>
-                  <li>Systematised all financial aspects.</li>
-                </ul>
-              </div>
-            </div> -->
 
           </div>
           <div class="swiper-pagination"></div>
