--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="col-lg-7">
             <div class="about-descr">
               <p class="p-heading">I'm a master student pursuing a degree of Robotics Engineering in Italy.</p>
-              <p class="separator">I have some works</p>
+              <p class="separator">As a roboticist, I’ve always been motivated by innovative and creative projects with teamwork. Being able to draw an interaction between humans and robots is fascinating adventure for me to foster the culture of innovation.</p>
             </div>
           </div>
         </div>
@@ -121,19 +121,47 @@
               </div>
             </div>
 
-            <!-- <div class="swiper-slide">
+            <div class="swiper-slide">
               <div class="services-block">
                 <i class="bi bi-card-checklist"></i>
-                <span>Volunteering Tutor</span>
-                <span>"NU Red Crescent"</span>
-                <p>2019 January - 2020 March</p>
+                <span>Summer Graduate Researcher</span>
+                <span>"Aalto University"</span>
+                <p>2022 May - 2022 September</p>
                 <ul class="separator">
-                  <li>Taught primary school students once a week for 3 hours.</li>
-                  <li>Helped students improve their academic standing.</li>
-                  <li>Assessed their knowledge, and created individual lesson plans for each lesson.</li>
+                  <li>I was working on IEC 61499 based Cloud communication between Vertical Farming and Server</li>
+                  <li>Although, the summer in Finland is amazing. White nights, urban friendly environment</li>
+                  <li>My lab was located in Espoo, Finland</li>
                 </ul>
               </div>
-            </div> -->
+            </div>
+
+            <div class="swiper-slide">
+              <div class="services-block">
+                <i class="bi bi-card-checklist"></i>
+                <span>Winter Machine Learning School</span>
+                <span>"Innopolis University"</span>
+                <p>2020 December</p>
+                <ul class="separator">
+                  <li>I was attending the winter school that was held online due to covid restrictions</li>
+                  <li>We studied how Machine Learning, Deep Learning tools are used in Robotics field</li>
+                  <li>The field contains various fields such as healthcare, agriculture, industry, and society</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div class="services-block">
+                <i class="bi bi-card-checklist"></i>
+                <span>Kazakh Khan Academy</span>
+                <span>"Nazarbayev University"</span>
+                <p>2020 January - 2021 January</p>
+                <ul class="separator">
+                  <li>I was translating and dubbing the beginner math tutorials for kids</li>
+                  <li>The aim was to translate the math equations to fit Kazakh subscription and words</li>
+                  <li>The length of the video was around 2-3 minutes. That was cool experience. </li>
+                </ul>
+              </div>
+            </div>
 
 
           </div>
