--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
               <div class="journal-info">
                 <a href="pages/blog-single.html"><img src="assets/img/blog-post-1.jpg" class="img-responsive" alt="img"></a>
                 <div class="journal-txt">
-                  <h4><a href="pages/blog-single.html">Blogs</a></h4>
+                  <h4><a href="blog-single.html">Blogs</a></h4>
                 </div>
               </div>
             </div>
