--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <p>A Robotics Engineer, Researcher</p>
 
         <ul class="list-unstyled list-social">
-          <!-- <li><a href=""><i class="bi bi-facebook"></i></a></li>
-          <li><a href=""><i class="bi bi-twitter"></i></a></li> -->
+          <li><a href="https://github.com/bzwayne/"><i class="bi bi-github"></i></a></li>
+          <li><a href="https://t.me/bzwayne/"><i class="bi bi-telegram"></i></a></li>
           <li><a href="https://www.instagram.com/bzwayne/"><i class="bi bi-instagram"></i></a></li>
           <li><a href="https://www.linkedin.com/in/bauyrzhan-zhakanov/"><i class="bi bi-linkedin"></i></a></li>
         </ul>
