--- a/index.html
+++ b/index.html
@@ -185,28 +185,28 @@
           <div class="row">
             <div class="col-lg-4 col-md-6">
               <div class="journal-info">
-                <a href="pages/blog-single.html"><img src="assets/img/blog-post-1.jpg" class="img-responsive" alt="img"></a>
+                <a href="blog-single.html"><img src="assets/img/blog-post-1.jpg" class="img-responsive" alt="img"></a>
                 <div class="journal-txt">
-                  <h4><a href="blog-single.html">Blogs</a></h4>
+                  <h4><a href="blog-single.html">Projects</a></h4>
                 </div>
               </div>
             </div>
-            <!-- <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6">
               <div class="journal-info">
                 <a href="blog-single.html"><img src="assets/img/blog-post-2.jpg" class="img-responsive" alt="img"></a>
                 <div class="journal-txt">
                   <h4><a href="blog-single.html">PHOTOS</a></h4>
                 </div>
               </div>
-            </div> -->
-            <!-- <div class="col-lg-4 col-md-6">
+            </div>
+            <div class="col-lg-4 col-md-6">
               <div class="journal-info">
                 <a href="blog-single.html"><img src="assets/img/blog-post-3.jpg" class="img-responsive" alt="img"></a>
                 <div class="journal-txt">
                   <h4><a href="blog-single.html">MY ARTICLES</a></h4>
                 </div>
               </div>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
