--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
           <li><a class="nav-link  scrollto" href="#services">Experience</a></li>
           <li class="dropdown"><a href="#journal"><span>Blog</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="pages/blog-single.html">Works</a></li>
-              <!-- <li><a href="blog-single.html">Photos</a></li> -->
-              <!-- <li><a href="blog-single.html">Articles</a></li> -->
+              <li><a href="pages/blog-single.html">Projects</a></li>
+              <li><a href="pages/blog-single.html">Photos</a></li>
+              <li><a href="pages/blog-single.html">Articles</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
@@ -65,7 +65,7 @@
           <li><a href="https://github.com/bzwayne/"><i class="bi bi-github"></i></a></li>
           <li><a href="https://t.me/bzwayne/"><i class="bi bi-telegram"></i></a></li>
           <li><a href="https://www.instagram.com/bzwayne/"><i class="bi bi-instagram"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/bauyrzhan-zhakanov/"><i class="bi bi-linkedin"></i></a></li>
+          <li><a href="cv/CV_19_03_2023.pdf"><i download class="bi bi-cloud-download"></i> Download CV </a></li>
         </ul>
       </div>
     </div>
@@ -110,13 +110,25 @@
             <div class="swiper-slide">
               <div class="services-block">
                 <i class="bi bi-briefcase"></i>
-                <span>Master student</span>
+                <span>Master's Degree</span>
                 <span>"University of Genoa"</span>
                 <p>2021 October - 2023 October</p>
                 <ul class="separator">
-                  <li>Research.</li>
-                  <li>Making robots move and think</li>
-                  <li>Some works.</li>
+                  <li>I am a master student at University of Genoa, Italy.</li>
+                  <li>My thesis is related with Human-Robot Interaction using Artificial Intelligence and Machine Learning. As well as working with a real robot.</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div class="services-block">
+                <i class="bi bi-briefcase"></i>
+                <span>Bachelor's Degree</span>
+                <span>"University of Genoa"</span>
+                <p>2021 October - 2023 October</p>
+                <ul class="separator">
+                  <li>I am a former bachelor student at Nazarbayev University, Kazakhstan.</li>
+                  <li>My bachelor thesis is related with AI Assistance using Generated Adversarial Networks. The work is demonstarted in my GitHub.</li>
                 </ul>
               </div>
             </div>
@@ -185,25 +197,25 @@
           <div class="row">
             <div class="col-lg-4 col-md-6">
               <div class="journal-info">
-                <a href="blog-single.html"><img src="assets/img/blog-post-1.jpg" class="img-responsive" alt="img"></a>
+                <a href="pages/blog-single.html"><img src="assets/img/blog-post-1.jpg" class="img-responsive" alt="img"></a>
                 <div class="journal-txt">
-                  <h4><a href="blog-single.html">Projects</a></h4>
+                  <h4><a href="pages/blog-single.html">Projects</a></h4>
                 </div>
               </div>
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="journal-info">
-                <a href="blog-single.html"><img src="assets/img/blog-post-2.jpg" class="img-responsive" alt="img"></a>
+                <a href="pages/blog-single.html"><img src="assets/img/blog-post-2.jpg" class="img-responsive" alt="img"></a>
                 <div class="journal-txt">
-                  <h4><a href="blog-single.html">PHOTOS</a></h4>
+                  <h4><a href="pages/blog-single.html">PHOTOS</a></h4>
                 </div>
               </div>
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="journal-info">
-                <a href="blog-single.html"><img src="assets/img/blog-post-3.jpg" class="img-responsive" alt="img"></a>
+                <a href="pages/blog-single.html"><img src="assets/img/blog-post-3.jpg" class="img-responsive" alt="img"></a>
                 <div class="journal-txt">
-                  <h4><a href="blog-single.html">MY ARTICLES</a></h4>
+                  <h4><a href="pages/blog-single.html">MY ARTICLES</a></h4>
                 </div>
               </div>
             </div>
@@ -274,8 +286,8 @@
       <div class="socials-media text-center">
 
         <ul class="list-unstyled">
-          <!-- <li><a href="#"><i class="bi bi-facebook"></i></a></li>
-          <li><a href="#"><i class="bi bi-twitter"></i></a></li> -->
+          <li><a href="https://github.com/bzwayne/"><i class="bi bi-github"></i></a></li>
+          <li><a href="https://t.me/bzwayne/"><i class="bi bi-telegram"></i></a></li>
           <li><a href="https://www.instagram.com/bzwayne/"><i class="bi bi-instagram"></i></a></li>
           <li><a href="https://www.linkedin.com/in/bauyrzhan-zhakanov/"><i class="bi bi-linkedin"></i></a></li>
         </ul>
