--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <li><a href="https://github.com/bzwayne/"><i class="bi bi-github"></i></a></li>
           <li><a href="https://t.me/bzwayne/"><i class="bi bi-telegram"></i></a></li>
           <li><a href="https://www.instagram.com/bzwayne/"><i class="bi bi-instagram"></i></a></li>
-          <li><a href="cv/CV_19_03_2023.pdf"><i download class="bi bi-cloud-download"></i> Download CV </a></li>
+          <li><a href="assets/cv/CV_19_03_2023.pdf"><i class="bi bi-cloud-download"></i> Download CV </a></li>
         </ul>
       </div>
     </div>
